readability fixes

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
   color: #FFFFFF;
   background-color: #002524;
-  background-image: url('assets/images/woodZoneBG.png');
   /*font-family: "Catrinity", sans-serif;*/
+  background-image: url('assets/images/darkw.png');
   font-family: "Inclusive Sans", sans-serif;
 }
 
@@ -15,7 +15,11 @@ nav {
   background-color:#4E224A;
   text-align: center;
   margin: auto;
-  padding:0.5em;
+  padding:0.35em;
+}
+
+.title {
+  background-image: url('assets/images/woodZoneBG.png');
 }
 
 hr {
